--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -32,7 +32,7 @@
   list-style-type: none;
 }
 .link:hover {
-  color: #67103a;
+  color: #542444;
 }
 
 .right li:first-child {
@@ -43,4 +43,22 @@ nav a .brand-logo.right{
   top: 0;
   width: 111px;
   right: 0rem !important;
+}
+.carrito {
+  display: flex;
+  align-items: center;
+}
+
+.carrito .link {
+  display: flex;
+  align-items: center;
+}
+
+.carrito .numerito {
+  margin-left: 5px !important; 
+  margin-right: 5px !important; 
+}
+
+.carrito .numerito {
+  margin-left: auto; 
 }
