--- a/src/components/Contacto/Contacto.css
+++ b/src/components/Contacto/Contacto.css
@@ -1,19 +1,15 @@
-.card{
-    flex: 1 0 18rem;
-    margin: 0.5rem;
-    min-height: 10rem; 
- }
-.card-content{
-    color: black;
-}
-.titulo-catalogo{
-        padding-top: 100px;
+.titulo-contacto{
+        padding-top: 100px !important;
         font-size: 50px;
         color: #ffab40;
         background: rgb(83,46,64);
         background: linear-gradient(90deg, rgba(83,46,64,1) 0%, rgba(110,31,64,1) 15%);
-        max-width: 30%;
+        max-width: 50%;
         background-clip: content-box;
         margin: 0 auto;
         border-radius: 10px;
+}
+.boton-contacto{
+    background: rgb(83,46,64);
+    background: linear-gradient(90deg, rgba(83,46,64,1) 0%, rgba(110,31,64,1) 15%);
 }
