--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,7 +2,10 @@
   
     padding: 5px;
     justify-content: space-between;
-    background-color: #1d1b1b !important;
+    background-color: #512036 !important;
+    position: absolute;
+    
+    width: 100%;
 }
 .container p{
     color: #ffffff;
