--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
   padding: 10px;
   justify-content: space-between;
   z-index: 1;
-  background-color: #1d1b1b !important;
+  background-color: #512036 !important;
 }
 .nav-wrapper {
   display: flex;
