--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
   font-family: "Lato";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  padding-bottom: 2em;
+  min-height: 100vh;
 }
 
 code {
